<resources>
  <string name="app_name">Meter Reader</string>
  <string name="about_name">About</string>

  <string name="title_settings">Settings</string>
  <string name="title_graph">Graph</string>
  <string name="title_stats">Statistics</string>


  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="action_about">About</string>
  <string name="data_url_Label">Location</string>
  <string name="data_url_hint">http://host:port/somedir/h2o.log</string>
  <string name="alert_threshold_label">Threshold</string>
  <string name="alert_threshold_hint">1000</string>
  <string name="toast_settings_saved">Settings saved.</string>

  <string name="data_fetch_parse_error">Unable to parse server response.</string>
  <string name="data_fetch_server_error">Unable to get server response.</string>

  <string name="threshold_notification_title">Meter threshold exceeded</string>
  <string name="threshold_notification_message">Used %1$d %2$s yesterday.</string>

  <string name="threshold_failure_title">Meter reading failure</string>
  <string name="threshold_failure_message">Unable to check usage.</string>

  <string name="threshold_auto_check_title">Daily Check</string>
  <string name="threshold_auto_check_time">time not set</string>

  <string name="units_label">Units</string>
  <string name="default_units">g</string>

  <string name="settings_section_data">Data</string>
  <string name="settings_section_graph">Graph</string>
  <string name="settings_section_usage">Automatic Usage Alert</string>

  <string name="last30DaysTitle">Last 30 days</string>
  <string name="last30DaysUsage">Usage:</string>
  <string name="last30DaysDailyAve">Daily Ave:</string>
  <string name="billComparisonTitle">Bill Comparison</string>
  <string name="billComparisonCalculate">Calculate</string>
  <string name="billComparisonStartDate">Start date:</string>
  <string name="billComparisonEndDate">End date:</string>

  <string name="start_date_error">Start date must be %1$s or later.</string>
  <string name="end_date_error">End date must be %1$s or earlier.</string>
  <string name="end_date_before_start_date_error">End date must be later than start date.</string>

  <string name="notifications_category">usage warning</string>

  <string name="about">&lt;b&gt;&lt;font color="0944b5"&gt;Meter Reader v1.0.3 &lt;/font&gt; &lt;/b&gt;&lt;br&gt;&lt;br&gt;&lt;b&gt;&lt;font color="0944b5"&gt;Purpose:&lt;/font&gt;&lt;/b&gt;&lt;br&gt;Graph water usage. Get notified when too much water has been used on the previous day. View statistics, such as last 30 days usage or specify start and ends to compare usage against bill.&lt;/br&gt;&lt;/br&gt;&lt;b&gt;&lt;font color="0944b5"&gt;Note:&lt;/font&gt;&lt;/b&gt;&lt;br&gt;This app itself does &lt;b&gt;not&lt;/b&gt; communicate with smart meters. It simply graphs the data and can send notifications.&lt;br&gt;&lt;br&gt;&lt;b&gt;&lt;font color="0944b5"&gt;Setup:&lt;/font&gt;&lt;/b&gt;&lt;br&gt;In order for this app to show usage, you will need the following:&lt;/br&gt;&lt;ul&gt;&lt;li&gt;hardware (an rtl-sdr compatible device, such as this &lt;a href="http://www.amazon.com/gp/product/B011HVUEME"&gt;one&lt;/a&gt;.)&lt;/li&gt;&lt;br&gt;&lt;li&gt;&lt;a href="https://github.com/bemasher/rtlamr"&gt;software&lt;/a&gt; for reading the meter (use JSON output), and a web server to host the daily log.&lt;/li&gt;&lt;br&gt;&lt;li&gt;consumption log (&lt;a href="https://github.com/elliotn/MeterReaderGraph/tree/master/utils"&gt;here&lt;/a&gt; you can find a script to generate/append to daily log and a cronjob to run the script daily.)&lt;/li&gt;&lt;/ul&gt;&lt;/br&gt;&lt;b&gt;&lt;font color="0944b5"&gt;Usage:&lt;/font&gt;&lt;/b&gt;&lt;br&gt;After a few readings have occurred, set the URL in the app, and graph the data.&lt;/br&gt;&lt;br&gt;You can also tell the app to automatically notify you if some threshold is reached via settings. (E.g., too much water was consumed.)&lt;/br&gt;&lt;/br&gt;&lt;b&gt;&lt;font color="0944b5"&gt;Release Notes:&lt;/font&gt;&lt;/b&gt;&lt;br&gt;&lt;br&gt;v1.0.3 - Added Statistics section, which includes info on last 30 days and bill comparison calculator.&lt;/br&gt;&lt;br&gt;v1.0.2 - Added average daily line graph.&lt;/br&gt;&lt;br&gt;v1.0.1 - Bug fix for threshold alarm.&lt;/br&gt;&lt;br&gt;v1.0 - Initial release.&lt;/br&gt;&lt;/br&gt;&lt;b&gt;&lt;font color="0944b5"&gt;Credits:&lt;/font&gt;&lt;/b&gt;&lt;br&gt;&lt;ul&gt;&lt;li&gt;Openclipart meter &lt;a href="https://openclipart.org/detail/172388/power-meter"&gt;icon&lt;/a&gt;.&lt;/li&gt;&lt;/br&gt;&lt;li&gt;&lt;a href="https://github.com/PhilJay/MPAndroidChart"&gt;MPAndroidChart&lt;/a&gt; for Android graphing library.&lt;/li&gt;&lt;/br&gt;&lt;li&gt;&lt;a href="https://github.com/bemasher/rtlamr"&gt;rtlamr&lt;/a&gt; for actually reading the meter.&lt;/li&gt;&lt;/br&gt;&lt;/ul&gt;&lt;br&gt;</string>
</resources>
